# pkg/api/handler/interface/chat.go
@@ -5,7 +5,7 @@ import "github.com/gin-gonic/gin"
 type ChatHandler interface {
 	GetChats(c *gin.Context)
 	GetMessages(c *gin.Context)
-	SendMessage(c *gin.Context)
+	// SendMessage(c *gin.Context)
 	MakeMessageRead(c *gin.Context)
 	Chat(c *gin.Context)
 }
