# pkg/api/routes/admin.go
@@ -6,7 +6,7 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-func AdminRoutes(route *gin.RouterGroup, adminHandler handlerInterface.AdminHandler, authMiddleware middleInterface.AuthMiddleware) {
+func AdminRoutes(route *gin.RouterGroup, adminHandler handlerInterface.AdminHandler, authMiddleware middleInterface.AuthMiddleware,subscriptionHandler handlerInterface.SubscriptionHandler) {
 	route.POST("/signUp", adminHandler.SignUp)
 	route.POST("/login", adminHandler.Login)
 	
@@ -17,6 +17,19 @@ func AdminRoutes(route *gin.RouterGroup, adminHandler handlerInterface.AdminHand
 			user.GET("", adminHandler.GetUsers)
 			user.GET("/:id",adminHandler.GetSingleUser)
 			user.PATCH("/:id", adminHandler.BlockOrUnBlock)
+		}
+		subscription:=route.Group("/subscription")
+		{
+			subscription.POST("",subscriptionHandler.Add)
+			subscription.PUT("/:subscriptionId",subscriptionHandler.Update)
+			subscription.PATCH("/:subscriptionId",subscriptionHandler.ActivateOrDeactivate)
+			subscription.GET("",subscriptionHandler.Get)
+			subscription.GET("/:subscriptionId",subscriptionHandler.GetById)
+		}
+		reported:=route.Group("/reported-users")
+		{
+			reported.GET("",adminHandler.ReportedUsers)
+			reported.GET("/:reportId",adminHandler.ReportedUser)
 		}
 	}
 }
