# pkg/api/routes/user.go
@@ -6,7 +6,7 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-func UserRoutes(route *gin.RouterGroup, userHandler handlerInterface.UserHandler, authMiddleware middleInterface.AuthMiddleware, activityHandler handlerInterface.ActivityHandler, homeHandler handlerInterface.HomeHandler,chatHandler handlerInterface.ChatHandler) {
+func UserRoutes(route *gin.RouterGroup, userHandler handlerInterface.UserHandler, authMiddleware middleInterface.AuthMiddleware, activityHandler handlerInterface.ActivityHandler, homeHandler handlerInterface.HomeHandler,chatHandler handlerInterface.ChatHandler,subscriptionHandler handlerInterface.SubscriptionHandler) {
 	route.POST("/sendOtp", userHandler.SendOtp)
 	route.POST("/verify", userHandler.VerifyOtp)
 	route.Use(authMiddleware.UserAuthorization())
@@ -37,9 +37,17 @@ func UserRoutes(route *gin.RouterGroup, userHandler handlerInterface.UserHandler
 		{
 			chat.GET("",chatHandler.GetChats)
 			chat.GET("/:chatId/message",chatHandler.GetMessages)
-			chat.POST("/:chatId/message",chatHandler.SendMessage)
+			// chat.POST("/:chatId/message",chatHandler.SendMessage)
 			chat.PATCH("/message/read",chatHandler.MakeMessageRead)
 		}
 		route.GET("/ws/:chatId",chatHandler.Chat)
+		subscription:=route.Group("subscription")
+		{
+			subscription.GET("",subscriptionHandler.GetToUsers)
+			subscription.GET("/:subscriptionId",subscriptionHandler.GetByIdToUsers)
+			subscription.POST("/order/:subscriptionId",subscriptionHandler.AddOrder)
+			subscription.GET("/payment/:orderId",subscriptionHandler.MakePayment)
+			subscription.GET("/payment-success",subscriptionHandler.VerifyPayment)
+		}
 	}
 }
